trunk/Archive2/9c/4978fe8a147275/output
main.cpp: In function 'int main()':
main.cpp:5:5: error: 'cout' is not a member of 'std'
     std::cout << "No crash" << std::endl;
     ^
main.cpp:5:32: error: 'endl' is not a member of 'std'
     std::cout << "No crash" << std::endl;
                                ^
